Added songs, extra table column, changed css

--- a/public/album.html
+++ b/public/album.html
@@ -28,26 +28,37 @@
           <td> 1 </td>
           <td> Blue </td>
           <td> X:XX </td>
+          <td> yes </td>
         </tr>
         <tr>
           <td> 2 </td>
           <td> Green </td>
           <td> X:XX </td>
+          <td> no </td>
         </tr>
         <tr>
           <td> 3 </td>
           <td> Red </td>
           <td> X:XX </td>
+          <td> yes </td>
         </tr>
         <tr>
           <td> 4 </td>
           <td> Pink </td>
           <td> X:XX </td>
+          <td> no </td>
         </tr>
         <tr>
           <td> 5 </td>
           <td> Magenta </td>
           <td> X:XX </td>
+           <td> yes </td>
+       </tr>
+        <tr>
+          <td> 5 </td>
+          <td> Chartreuse </td>
+          <td> X:XX </td>
+          <td> yes </td>
         </tr>
       </table>
     </div>
