--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!-- In HTML, comments, in these tags, are ignored and won't be seen. -->
 
 <!DOCTYPE html>
-<html>
+<<html data-ng-app="BlocJams">
    <head>
       <title>Bloc Jams</title>
       <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.1/build/cssreset/cssreset-min.css">
@@ -9,13 +9,14 @@
       <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300' rel='stylesheet' type='text/css'>
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
       <script src="/javascripts/vendor.js"></script>
       <script src="/javascripts/app.js"></script>
       <script>
           require('scripts/app');
       </script>
    </head>
-   <body  class='landing'>
+   <body ng-controller='Landing.controller'  class='landing'>
       <h1> Welcome to Bloc Jams! </h1>
       <div> <!-- Nav Bar -->
          <!--  div class='nav-bar'>
@@ -36,7 +37,7 @@
          <div class='hero-content'> <!-- Hero content -->
             <div class='container'>
                <h1> Bloc Jams </h1>
-               <h3> Turn the music up! </h3>
+               <h3 ng-click='subTextClicked()'> {{ subText }} </h3>
             </div>
          </div>
      </div>
@@ -60,5 +61,12 @@
          </div>
       </div>
 
+      <div class="landing-album-list container">
+         <div class="row">
+            <div class="col-md-4" ng-repeat="albumURL in albumURLs">
+            <img ng-src="{{ albumURL }}" />
+            </div>
+         </div>
+      </div>
   </body>
 </html>
