Converted Bloc Jams to a single page application ckpt 36

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       <div> <!-- Hero content -->
          <div class='hero-content'> <!-- Hero content -->
             <div class='container'>
-               <h1> Bloc Jams </h1>
+               <h1 ng-click='titleTextClicked()'> {{ titleText }} </h1>
                <h3 ng-click='subTextClicked()'> {{ subText }} </h3>
             </div>
          </div>
