--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!-- In HTML, comments, in these tags, are ignored and won't be seen. -->
 
 <!DOCTYPE html>
-<<html data-ng-app="BlocJams">
+<html data-ng-app="BlocJams">
    <head>
       <title>Bloc Jams</title>
       <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.1/build/cssreset/cssreset-min.css">
@@ -10,14 +10,15 @@
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300' rel='stylesheet' type='text/css'>
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
-      <script src="/javascripts/vendor.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
+      <!--  script src="/javascripts/vendor.js"></script  -->
       <script src="/javascripts/app.js"></script>
       <script>
           require('scripts/app');
       </script>
    </head>
-   <body ng-controller='Landing.controller'  class='landing'>
-      <h1> Welcome to Bloc Jams! </h1>
+   <body>
+      <!--  h1> Welcome to Bloc Jams! </h1  -->
       <div> <!-- Nav Bar -->
          <!--  div class='nav-bar'>
             <img src="/images/blocjams.png" />
@@ -33,40 +34,8 @@
          </nav>
       </div>
 
-      <div> <!-- Hero content -->
-         <div class='hero-content'> <!-- Hero content -->
-            <div class='container'>
-               <h1 ng-click='titleTextClicked()'> {{ titleText }} </h1>
-               <h3 ng-click='subTextClicked()'> {{ subText }} </h3>
-            </div>
-         </div>
-     </div>
+      <!-- Render templates here -->
+      <div ui-view></div>
 
-      <div> <!-- Selling points -->
-         <div class='selling-points container'> <!-- selling points -->
-            <div class='row'>
-               <div class='point col-md-4'>
-                  <h5>Choose your music </h5>
-                  <p>The world is full of music; why should you have to listen to music that someone else chose? </p>
-               </div>
-               <div class='point col-md-4'>
-                  <h5>Unlimited, streaming, ad-free </h5>
-                  <p>No arbitrary limits. No distractions. </p>
-               </div>
-               <div class='point col-md-4'>
-                  <h5>Mobile enabled</h5>
-                  <p>Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
-               </div>
-            </div>
-         </div>
-      </div>
-
-      <div class="landing-album-list container">
-         <div class="row">
-            <div class="col-md-4" ng-repeat="albumURL in albumURLs">
-            <img ng-src="{{ albumURL }}" />
-            </div>
-         </div>
-      </div>
   </body>
 </html>
