changing references to cc-jukebox from old name

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!-- In HTML, comments, in these tags, are ignored and won't be seen. -->
 
 <!DOCTYPE html>
-<html data-ng-app="BlocJams">
+<html data-ng-app="ccJukebox">
    <head>
-      <title>Bloc Jams</title>
+      <title>CC Jukebox</title>
       <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.1/build/cssreset/cssreset-min.css">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
@@ -20,11 +20,7 @@
       </script>
    </head>
    <body>
-      <!--  h1> Welcome to Bloc Jams! </h1  -->
-      <div> <!-- Nav Bar -->
-         <!--  div class='nav-bar'>
-            <img src="/images/blocjams.png" />
-         </div  -->
+      <div>
          <nav class="player-header-nav navbar">    <!-- Nav Bar -->
             <div class="container">
                <div class='navbar-header'> <!-- Nav Bar -->
