--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300' rel='stylesheet' type='text/css'>
       <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.js"></script>
+      <!--  script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script  -->
       <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/buzz/1.1.0/buzz.min.js"></script>
       <!--  script src="/javascripts/vendor.js"></script  -->
@@ -25,7 +26,7 @@
             <div class="container">
                <div class='navbar-header'> <!-- Nav Bar -->
                   <a ui-sref='landing' class='logo navbar-left'>
-                     <img src="/images/blocjams.png">
+                     <img src="/images/cc-jukebox-2.png">
                   </a>
                </div>
                <ul class="nav navbar-nav navbar-right">
