fiddling with logot to make it stand out

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <div class="container">
                <div class='navbar-header'> <!-- Nav Bar -->
                   <a ui-sref='landing' class='logo navbar-left'>
-                     <img src="/images/cc-jukebox-2.png">
+                     <img src="/images/cc-jukebox-2c.png">
                   </a>
                </div>
                <ul class="nav navbar-nav navbar-right">
