changed cc-jukebox logo and used svg version

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
             <div class="container">
                <div class='navbar-header'> <!-- Nav Bar -->
                   <a ui-sref='landing' class='logo navbar-left'>
-                     <img src="/images/cc-jukebox-2c.png">
+                     <img src="/images/cc-jukebox-3z.svg" height="100px">
+                     <!-- img src="/images/cc-jukebox-3a.png"  -->
                   </a>
                </div>
                <ul class="nav navbar-nav navbar-right">
