--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 <html data-ng-app="ccJukebox">
    <head>
       <title>CC Jukebox</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1"/>
+      <!--  meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/ -->
       <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.17.1/build/cssreset/cssreset-min.css">
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
       <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
